# GradeSolver

./: .gitignore  CMakeLists.txt  Makefile  README.md  schema.json
.github/workflows/: publish-npm.yml
binding/: CMakeLists.txt  binding_api.cpp
binding/js/: index.js  index.mjs  package.json  solver.d.ts
cli/: CMakeLists.txt  main.cpp
lib/MAQUINA_D/: CMakeLists.txt  implementacion_d.cpp  interface_d.hpp
lib/MAQUINA_D/estrategias/: balanced.cpp  max_weight_first.cpp  min_weight_first.cpp  minimum.cpp
lib/MAQUINA_P/: CMakeLists.txt  implementacion_p.cpp  interface_p.hpp
lib/MAQUINA_S/: CMakeLists.txt  implementacion_s.cpp  interface_s.hpp
lib/json/: CMakeLists.txt  json_serializer.cpp  json_serializer.hpp
lib/shared/: CMakeLists.txt  index.hpp
scripts/: build_wasm.sh  test_pack.sh
src/bindings/: CMakeLists.txt  binding_api.cpp
src/cli/: CMakeLists.txt  main.cpp
src/lib/: CMakeLists.txt  solver.cpp  solver.hpp  types.hpp
tests/: input.json  package.json  pnpm-lock.yaml  run_node.js  run_python.py
tests/cases/: 01-basic.json  02-heaviest.json  02-rules.json  02-uniform.json  03-evaluado.json  03-rules-possible.json  03-rules.json  04-rules-impossible.json
tests/js/: package.json  solver.js  solver.wasm  test_runner.js
